# TRADINGBOT

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  install.bat  install.sh  requirements.txt
alerts/: email.py  telegram.py
apps/desktop/: README.txt  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/desktop/app/: globals.css  globals.css.pre-overhaul  layout.tsx  page.tsx
apps/desktop/lib/: audit-store.ts  dashboard-server.ts  dashboard-state.ts  operator-control.ts  review-server.ts  runtime-snapshot.ts  trading-settings.ts  trading-settings.ts.bak
apps/desktop/runtime/: runtime_snapshot.json
apps/desktop/scripts/: tauri-build-macos.sh  tauri-build-windows.ps1
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
config/: assets.py  exchanges.py  settings.py
core/: db.py  heartbeat.py  models.py  redis_client.py
crates/account-state/: Cargo.toml
crates/account-state/src/: lib.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs
crates/binance-adapter/: Cargo.toml
crates/binance-adapter/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/confluence/: Cargo.toml
crates/confluence/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/learning/: Cargo.toml
crates/learning/src/: lib.rs
crates/market-data/: Cargo.toml
crates/mode-authority/: Cargo.toml
crates/news-sentiment/: Cargo.toml
crates/patch-sandbox/: Cargo.toml
crates/portfolio/: Cargo.toml
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/risk-engine/: Cargo.toml
crates/safeguards/: Cargo.toml
crates/secrets/: Cargo.toml
crates/self-heal/: Cargo.toml
crates/storage/: Cargo.toml
crates/strategy-engine/: Cargo.toml
crates/supervisor/: Cargo.toml
crates/supervisor/src/: main.rs
crates/watchdog/: Cargo.toml
design-system/nyraq-quant-os/: MASTER.md
docs/: architecture.md  genetic-indicators.md  go-live-checklist.md  local-stack.md  research-datasets.md
docs/specs/: binance-exchange-layer.md  execution.md  local-ops.md  mode-authority.md  portfolio-sandbox.md  research-loop.md  risk-gate.md  strategy-confluence.md  watchdog-self-heal.md
migrations/: 001_initial_schema.sql
scripts/: com.cryptobot.healthcheck.plist  com.cryptobot.trading.plist  healthcheck.ps1  healthcheck.sh  launch.ps1  launch.sh  overlay-compare.sh  paper-week-monitor.sh  research-dataset-smoke.sh  stack.ps1  stack.sh  stop.bat  stop.sh  uninstall.bat  uninstall.sh
services/backtester/: Dockerfile  main.py  walk_forward.py
services/correlation_engine/: Dockerfile  main.py
services/dashboard_api/: Dockerfile  main.py  ws_manager.py
services/dashboard_ui/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
services/data_ingestion/: Dockerfile  exchange_connector.py  main.py
services/execution_engine/: Dockerfile  main.py  router.py  slippage.py
services/feature_engine/: Dockerfile  aggregator.py  indicators.py  main.py  validator.py
services/latency_monitor/: Dockerfile  main.py
services/regime_detector/: Dockerfile  clustering.py  ensemble.py  health_monitor.py  main.py
services/retrainer/: Dockerfile  main.py  model_registry.py
services/risk_layer/: Dockerfile  kelly.py  main.py
services/strategy_runner/: Dockerfile  base.py  main.py
services/strategy_selector/: Dockerfile  main.py
services/trade_ledger/: Dockerfile  main.py
services/watchdog/: Dockerfile  main.py
strategies/always_on/: cross_exchange_spread.py  multi_tf_confluence.py  triangular_arb.py  volume_profile.py
strategies/high_vol/: cross_exchange_arb.py  gap_filler.py  liquidation_hunter.py  panic_reversal.py  squeeze_detector.py  vol_mean_reversion.py  volatility_breakout.py
strategies/low_vol/: dca_accumulator.py  funding_harvest.py  grid_trading.py  mean_reversion_slow.py  spread_collector.py
strategies/ranging/: bollinger_reversion.py  keltner_channel.py  ob_imbalance_fade.py  pivot_points.py  range_scalper.py  rsi_extremes.py  stoch_rsi.py  zscore_reversion.py
strategies/trending/: adx_strength.py  breakout_retest.py  ema_crossover.py  ichimoku_cloud.py  macd_trend.py  momentum_burst.py  supertrend.py  trend_pullback.py  vwap_breakout.py
tests/: conftest.py  test_aggregator.py  test_ema_crossover.py  test_indicators.py  test_kelly.py  test_models.py  test_regime_detector.py  test_risk_layer.py  test_slippage.py  test_strategy_base.py
(+61 files in other folders)
