[package]
name = "sthyra-binance-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sthyra-account-state = { path = "../account-state" }
sthyra-domain = { path = "../domain" }
sthyra-market-data = { path = "../market-data" }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }

[lib]
name = "sthyra_binance_adapter"
path = "src/lib.rs"
