[package]
name = "sthyra-confluence"
version = "0.1.0"
edition = "2021"

[dependencies]
sthyra-domain = { path = "../domain" }
sthyra-market-data = { path = "../market-data" }
sthyra-news-sentiment = { path = "../news-sentiment" }
sthyra-strategy-engine = { path = "../strategy-engine" }

[lib]
name = "sthyra_confluence"
path = "src/lib.rs"
