[package]
name = "sthyra-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sthyra-confluence = { path = "../confluence" }
sthyra-domain = { path = "../domain" }
sthyra-market-data = { path = "../market-data" }
sthyra-news-sentiment = { path = "../news-sentiment" }
sthyra-replay = { path = "../replay" }
sthyra-strategy-engine = { path = "../strategy-engine" }

[lib]
name = "sthyra_learning"
path = "src/lib.rs"
