[package]
name = "sthyra-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
sthyra-confluence = { path = "../confluence" }
sthyra-domain = { path = "../domain" }
sthyra-market-data = { path = "../market-data" }
sthyra-news-sentiment = { path = "../news-sentiment" }
sthyra-strategy-engine = { path = "../strategy-engine" }

[lib]
name = "sthyra_replay"
path = "src/lib.rs"
